--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,11 @@
   },
 "scripts": {
   "start": "react-scripts start",
-  "build": "set CI=false && set DISABLE_ESLINT_PLUGIN=true && react-scripts build",
+  "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
-},
+}
+
 
   "eslintConfig": {
     "extends": [
